--- a/components/SearchTitle/SearchTitle.module.css
+++ b/components/SearchTitle/SearchTitle.module.css
@@ -9,7 +9,7 @@
 
 .title {
   display: flex;
-  gap: 1.5rem;
+  gap: 1rem;
   justify-content: center;
   align-items: center;
   width: 100%;
@@ -25,7 +25,7 @@
     gap: 0.25rem;
   }
   .title {
-    gap: 1rem;
+    gap: 0.75rem;
   }
 
   .container h1 {
